--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -8,7 +8,7 @@
             <div class="navbar-collapse collapse d-sm-inline-flex">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item dropdown">
-                        <ModuleDropdown />
+                        <DropdownMenu Menu="@DropdownMenuModules"/>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@
                             <li class="dropdown-item">user@@email.com</li>
                             
                             <li class="dropstart">
-                                <ModuleDropdown />
+                                <DropdownMenu Menu="@DropdownMenuModules"/>
                             </li>
                             
                             <li class="dropdown-item">Edit Profile</li>
@@ -50,8 +50,3 @@
         </div>
     </div>
 </nav>
-
-@code {
-    [Parameter]
-    public List<BreadCrumbLinkModel> Links { get; set; } = new List<BreadCrumbLinkModel>();
-}
