--- a/Core/OpenCRM.Core.Web/Components/_Imports.razor
+++ b/Core/OpenCRM.Core.Web/Components/_Imports.razor
@@ -1,3 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using OpenCRM.Core.Web.Table
 @using OpenCRM.Core.Web.Models
+@using OpenCRM.Core.Web.Components.DropdownMenu
