--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Index.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Languages/Index.cshtml
@@ -7,8 +7,4 @@
 
 <component type="typeof(OpenCRM.Core.Web.Components.BreadCrumb)" render-mode="ServerPrerendered" param-links="Model.Links" />
 
-<component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered"
-           param-title="Model.Title"
-           param-page="Model.TablePage"
-           param-rows="Model.TableRows"
-           param-headers="Model.TableHeaders" />
+<component type="typeof(OpenCRM.Core.Web.Components.Table.Table)" render-mode="ServerPrerendered" param-tableData="Model.Table"/>
