--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Edit.cshtml
@@ -1,4 +1,33 @@
 ﻿@page
 @model OpenCRM.Core.Web.Areas.Manage.Pages.Translations.EditModel
 @{
+    ViewData["Title"] = "Edit";
 }
+
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="card border-1 rounded-lg p-0">
+            <div class="card-header"><h3 class="text-center font-weight-light my-4">Edit</h3></div>
+            <div class="card-body">
+                <form method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Translation.Key" class="form-control" />
+                        <label asp-for="Translation.Key" class="control-label"></label>
+                        <span asp-validation-for="Translation.Key" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Translation.Translation" class="form-control" />
+                        <label asp-for="Translation.Translation" class="control-label"></label>
+                        <span asp-validation-for="Translation.Translation" class="text-danger"></span>
+                    </div>
+                    <div class="mt-4 mb-0">
+                        <div class="d-grid">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
