--- a/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
@@ -4,12 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OpenCRM.Web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
+    <link rel="icon" type="image/x-icon" href="_content/OpenCRM.Core.Web/favicon.ico" asp-append-version="true">
+    <link rel="stylesheet" href="_content/OpenCRM.Core.Web/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" asp-append-version="true" />
+
     <link rel="stylesheet" href="_content/OpenCRM.Core.Web/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/OpenCRM.Web.styles.css" asp-append-version="true" />
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-    <link href="_content/OpenCRM.Core.Web/css/styles.css" rel="stylesheet" />
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="_content/OpenCRM.Core.Web/css/styles.css" asp-append-version="true" />
+
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous" asp-append-version="true"></script>
 </head>
 <body>
     <header>
@@ -28,12 +31,11 @@
         </div>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="_content/OpenCRM.Core.Web/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="_content/OpenCRM.Core.Web/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="_content/OpenCRM.Core.Web/js/site.js" asp-append-version="true"></script>
-    <script src="_content/OpenCRM.Core.Web/js/scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-    <script src="~/js/datatables-simple-demo.js"></script>
+    <script src="_content/OpenCRM.Core.Web/js/scripts.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
