--- a/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
+++ b/Core/OpenCRM.Core.Web/Pages/Shared/_CoreLayout.cshtml
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OpenCRM.Web</title>
 
-    <link rel="icon" type="image/x-icon" href="_content/OpenCRM.Core.Web/favicon.ico" asp-append-version="true">
-    <link rel="stylesheet" href="_content/OpenCRM.Core.Web/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
+    <link rel="icon" type="image/x-icon" href="~/_content/OpenCRM.Core.Web/favicon.ico" asp-append-version="true">
+    <link rel="stylesheet" href="~/_content/OpenCRM.Core.Web/lib/bootstrap/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" asp-append-version="true" />
 
-    <link rel="stylesheet" href="_content/OpenCRM.Core.Web/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="_content/OpenCRM.Core.Web/css/styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/_content/OpenCRM.Core.Web/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/_content/OpenCRM.Core.Web/css/styles.css" asp-append-version="true" />
 
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous" asp-append-version="true"></script>
 </head>
@@ -31,10 +31,10 @@
         </div>
     </footer>
 
-    <script src="_content/OpenCRM.Core.Web/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
-    <script src="_content/OpenCRM.Core.Web/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
-    <script src="_content/OpenCRM.Core.Web/js/site.js" asp-append-version="true"></script>
-    <script src="_content/OpenCRM.Core.Web/js/scripts.js" asp-append-version="true"></script>
+    <script src="~/_content/OpenCRM.Core.Web/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/_content/OpenCRM.Core.Web/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    <script src="~/_content/OpenCRM.Core.Web/js/site.js" asp-append-version="true"></script>
+    <script src="~/_content/OpenCRM.Core.Web/js/scripts.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
