--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -5,6 +5,7 @@
                 <img src="_content/OpenCRM.Core.Web/images/logo.png" alt="OpenDHS" width="64" height="32">
             </a>
             <div class="navbar-collapse collapse d-sm-inline-flex me-2">
+                <h4>Soy otro modo de mantener el estado de un componente: @_selectedModule</h4>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item dropdown">
                         <DropdownMenu Menu="@DropdownMenuModules" />
