--- a/Core/OpenCRM.Core.Web/Components/_Imports.razor
+++ b/Core/OpenCRM.Core.Web/Components/_Imports.razor
@@ -1,3 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using OpenCRM.Core.Web.Models
 @using OpenCRM.Core.Web.Components.DropdownMenu
+@using OpenCRM.Core.Web.Components.Block
+@using OpenCRM.Core.Web.Components.Block.Description
