--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -21,9 +21,8 @@
                         <span asp-validation-for="Model.SubTitle" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Model.Description" class="form-control" placeholder="Description" />
-                        <label asp-for="Model.Description" class="control-label"></label>
-                        <span asp-validation-for="Model.Description" class="text-danger"></span>
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" placeholder="Description" style="height:20rem;" />
                     </div>
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Image</label>
