--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="card border-1 rounded-lg p-0">
-            <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Event</h3></div>
+            <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Block</h3></div>
             <div class="card-body">
                 <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
