--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -8,7 +8,7 @@
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Block</h3></div>
             <div class="card-body">
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
                         <input asp-for="Model.Title" class="form-control" placeholder="Main Text" />
@@ -26,9 +26,13 @@
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label asp-for="ImageName" class="form-label"></label>
-                        <input asp-for="ImageName" class="form-control" type="file" accept="image/*">
-                        <span asp-validation-for="ImageName" class="text-danger"></span>
+                        <input asp-for="FileData" type="file" class="form-control" data-msg-invalid-file="select file" accept="image/*"/>
+                        <span asp-validation-for="FileData" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3">
+                        <input asp-for="IsPublic" class="form-check-input" />
+                        <label asp-for="IsPublic" class="form-check-label"></label>
+                        <span asp-validation-for="IsPublic" class="text-danger"></span>
                     </div>
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
