--- a/Core/OpenCRM.Core.Web/Components/Navbar.razor
+++ b/Core/OpenCRM.Core.Web/Components/Navbar.razor
@@ -31,7 +31,7 @@
 
         <div class="d-flex align-items-center text-center">
             <div class="navbar-collapse collapse d-sm-inline-flex">
-                user@@email.com
+                @UserName
             </div>
             <div class="navbar-collapse d-sm-inline-flex">
                 <ul class="navbar-nav flex-grow-1">
@@ -50,7 +50,7 @@
                             </li>
 
                             <li class="dropdown-item">Name Lastname</li>
-                            <li class="dropdown-item">user@@email.com</li>
+                            <li class="dropdown-item"> @UserName</li>
 
                             <li class="dropstart">
                                 <DropdownMenu Menu="@DropdownMenuModules" />
