--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Details.cshtml
@@ -11,6 +11,11 @@
                 <form>
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
+                        <input asp-for="Model.Data.Code" class="form-control" readonly />
+                        <label asp-for="Model.Data.Code" class="control-label"></label>
+                        <span asp-validation-for="Model.Data.Code" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating mb-3">
                         <input asp-for="Model.Data.Title" class="form-control" readonly />
                         <label asp-for="Model.Data.Title" class="control-label"></label>
                         <span asp-validation-for="Model.Data.Title" class="text-danger"></span>
@@ -25,10 +30,8 @@
                         <label asp-for="Model.Data.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Data.Description" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
-                        <input asp-for="ImageName" class="form-control" readonly />
-                        <label asp-for="ImageName" class="control-label"></label>
-                        <span asp-validation-for="ImageName" class="text-danger"></span>
+                    <div class="mb-3">
+                        <img src="Model.ImageUrl" />
                     </div>
                 </form>
             </div>
