--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
@@ -8,8 +8,13 @@
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Edit</h3></div>
             <div class="card-body">
-                <form method="post">
+                <form method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-floating mb-3">
+                        <input asp-for="Model.Code" class="form-control" />
+                        <label asp-for="Model.Code" class="control-label"></label>
+                        <span asp-validation-for="Model.Code" class="text-danger"></span>
+                    </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Model.Title" class="form-control" />
                         <label asp-for="Model.Title" class="control-label"></label>
@@ -26,8 +31,16 @@
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
-                        <label for="formFile" class="form-label">Image</label>
-                        <input asp-for="ImageName" class="form-control" type="file" accept="image/*" id="formFile">
+                        <img src="Model.ImageUrl"/>
+                    </div>
+                    <div class="mb-3">
+                        <input asp-for="FileData" type="file" class="form-control" data-msg-invalid-file="select file" accept="image/*"/>
+                        <span asp-validation-for="FileData" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3">
+                        <input asp-for="IsPublic" class="form-check-input" />
+                        <label asp-for="IsPublic" class="form-check-label"></label>
+                        <span asp-validation-for="IsPublic" class="text-danger"></span>
                     </div>
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
