--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -30,6 +30,20 @@
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
+                    <select class="form-select" aria-label="Default select example" asp-for="ImageIdSelected">
+                        <option selected value="">Select an images</option>
+                        @foreach(var image in Model.Images)
+                        {
+                            <option value="@image.Id">@image.ImageName</option>
+                        }
+                    </select>
+                       
+                    @if (Model.ImageIdSelected != "")
+                    {
+                        <div class="mb-3">
+                            <img src="@Model.ImageUrlSelected" />
+                        </div>
+                    }
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Create" class="btn btn-primary btn-block"/>
