--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -30,7 +30,7 @@
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
-                    <select class="form-select" aria-label="Default select example" asp-for="ImageIdSelected">
+                    <select class="form-select mb-3" aria-label="Default select example" asp-for="ImageIdSelected">
                         <option selected value="">Select an images</option>
                         @foreach(var image in Model.Images)
                         {
@@ -41,9 +41,10 @@
                     @if (Model.ImageIdSelected != "")
                     {
                         <div class="mb-3">
-                            <img src="@Model.ImageUrlSelected" />
+                            <img src="@Model.ImageUrlSelected" style="width:100px;"/>
                         </div>
                     }
+
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Create" class="btn btn-primary btn-block"/>
