--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Delete.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Delete.cshtml
@@ -33,9 +33,13 @@
                         <label asp-for="Model.Data.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Data.Description" class="text-danger"></span>
                     </div>
-                    <div class="mb-3">
-                        <img src="Model.Data.ImageUrl" />
-                    </div>
+
+                    @if (!string.IsNullOrEmpty(Model.Model.Data.ImageUrl))
+                    {
+                        <div class="mb-3">
+                            <img src="@Model.Model.Data.ImageUrl" style="width:100px;"/>
+                        </div>
+                    }
                 </form>
                 <form method="post">
                     <input type="hidden" asp-for="Model.ID" />
