--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Details.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Details.cshtml
@@ -30,9 +30,12 @@
                         <label asp-for="Model.Data.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Data.Description" class="text-danger"></span>
                     </div>
-                    <div class="mb-3">
-                        <img src="Model.ImageUrl" />
-                    </div>
+                    @if (!string.IsNullOrEmpty(Model.Model.Data.ImageUrl))
+                    {
+                        <div class="mb-3">
+                            <img src="@Model.Model.Data.ImageUrl" style="width:100px;" />
+                        </div>
+                    }
                 </form>
             </div>
         </div>
