--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Create.cshtml
@@ -30,7 +30,8 @@
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
-                    <select class="form-select mb-3" aria-label="Default select example" asp-for="ImageIdSelected">
+
+                    <select id="select-image" class="form-select mb-3" aria-label="Default select example" asp-for="ImageIdSelected">
                         <option selected value="">Select an images</option>
                         @foreach(var image in Model.Images)
                         {
@@ -41,7 +42,7 @@
                     @if (Model.ImageIdSelected != "")
                     {
                         <div class="mb-3">
-                            <img src="@Model.ImageUrlSelected" style="width:100px;"/>
+                            <img id="image-block-card" src="@Model.ImageUrlSelected" style="width:100px;"/>
                         </div>
                     }
 
