--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Block/Edit.cshtml
@@ -8,7 +8,7 @@
         <div class="card border-1 rounded-lg p-0">
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Edit</h3></div>
             <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
+                <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-floating mb-3">
                         <input asp-for="Model.Code" class="form-control" />
@@ -30,18 +30,20 @@
                         <label asp-for="Model.Description" class="control-label"></label>
                         <span asp-validation-for="Model.Description" class="text-danger"></span>
                     </div>
-                    <div class="mb-3">
-                        <img src="Model.ImageUrl"/>
-                    </div>
-                    <div class="mb-3">
-                        <input asp-for="FileData" type="file" class="form-control" data-msg-invalid-file="select file" accept="image/*"/>
-                        <span asp-validation-for="FileData" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3">
-                        <input asp-for="IsPublic" class="form-check-input" />
-                        <label asp-for="IsPublic" class="form-check-label"></label>
-                        <span asp-validation-for="IsPublic" class="text-danger"></span>
-                    </div>
+                    <select class="form-select mb-3" aria-label="Default select example" asp-for="ImageIdSelected">
+                        <option selected value="">Select an images</option>
+                        @foreach (var image in Model.Images)
+                        {
+                            <option value="@image.Id">@image.ImageName</option>
+                        }
+                    </select>
+
+                    @if (!string.IsNullOrEmpty(Model.ImageUrlSelected))
+                    {
+                        <div class="mb-3">
+                            <img src="@Model.ImageUrlSelected" style="width:100px;" />
+                        </div>
+                    }
                     <div class="mt-4 mb-0">
                         <div class="d-grid">
                             <input type="submit" value="Save" class="btn btn-primary" />
