--- a/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
+++ b/Core/OpenCRM.Core.Web/Areas/Manage/Pages/Translations/Create.cshtml
@@ -22,12 +22,12 @@
                             <label asp-for="Translation.Translation" class="control-label"></label>
                             <span asp-validation-for="Translation.Translation" class="text-danger"></span>
                         </div>                       
-                       @* <div class="form-floating mb-3">
+                       <div class="form-floating mb-3">
                             <select asp-for="Translation.LanguageId" asp-items="Model.Languages" class="form-select">
                                 <option selected>Select a Language</option>
                             </select>
                             <span asp-validation-for="Translation.LanguageId" class="text-danger"></span>                            
-                        </div>*@
+                        </div>
                         @if (Model.Languages.Count != 0)
                         {
                             for (int index = 0; index < Model.Languages.Count; index++)
